--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="movie-search">
   <head>
     <meta charset="utf-8">
-    <title>Untitled</title>
+    <title>Angular Movie Search</title>
     <!-- styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -13,9 +13,10 @@
       <h1 class="title">Angular OMDb API Search</h1>
         <div class="row">
           <div class="input-field col m4 offset-m4" ng-controller="mainController as main">
-            <input type="text" ng-model="search.text" name="name" placeholder="Enter Search Query">
-            <a class="submitBtn wave effect waves-light btn col m4 offset-m4" ng-click="main.search(search.text)">Submit</a>
-            <span>{{main.movieObj.Search[0].Title}}</span>
+            <form name="queryForm" ng-submit="main.search(main.query)">
+              <input type="text" ng-model="main.query" name="query" placeholder="Enter a movie by title." required>
+              <button class="submitBtn wave effect waves-light btn col m4 offset-m4">Submit</button>
+            </form>
           </div>
         </div>
         <br>
@@ -33,6 +34,8 @@
     <script type="text/javascript" src="js/config.js"></script>
     <!-- main component -->
     <script type="text/javascript" src="js/components/main/main.controller.js"></script>
+    <script type="text/javascript" src="js/components/main/main.moviesController.js"></script>
+    <script type="text/javascript" src="js/components/main/main.showController.js"></script>
     <script type="text/javascript" src="js/services/services.api.js"></script>
   </body>
 </html>
