--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Angular Movie Search</title>
     <!-- styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="public/src/css/main.css">
   </head>
   <body ng-cloak>
     <!-- sample angular code -->
@@ -22,20 +22,20 @@
         <br>
         <hr>
       <div ng-view></div>
-      </div>
+    </div>
 
     </div>
     <!-- scripts -->
-    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="https//code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
+    <script type="text/javascript" src="https//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="public/src/js/app.js"></script>
+    <script type="text/javascript" src="public/src/js/config.js"></script>
     <!-- main component -->
-    <script type="text/javascript" src="js/components/main/main.controller.js"></script>
-    <script type="text/javascript" src="js/components/main/main.moviesController.js"></script>
-    <script type="text/javascript" src="js/components/main/main.showController.js"></script>
-    <script type="text/javascript" src="js/services/services.api.js"></script>
+    <script type="text/javascript" src="public/src/js/components/main/main.controller.js"></script>
+    <script type="text/javascript" src="public/src/js/components/main/main.moviesController.js"></script>
+    <script type="text/javascript" src="public/src/js/components/main/main.showController.js"></script>
+    <script type="text/javascript" src="public/src/js/services/services.api.js"></script>
   </body>
 </html>
