--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           <div class="input-field col m4 offset-m4" ng-controller="mainController as main">
             <form name="queryForm" ng-submit="main.search(main.query)">
               <input type="text" ng-model="main.query" name="query" placeholder="Enter a movie by title." required>
-              <button class="submitBtn wave effect waves-light cyan btn col m4 offset-m4">Submit</button>
+              <button class="submitBtn wave effect waves-light btn col m4 offset-m4">Submit</button>
             </form>
           </div>
         </div>
